# cvedix-sdk

./: .gitignore  README.md  VERSION
cmake/: cvedix-config.cmake
docs/: NODE_CATALOG.md  PIPELINE_PATTERNS.md  QUICKSTART.md
include/cvedix/: cvedix_version.h
include/cvedix/excepts/: cvedix_invalid_argument_error.h  cvedix_invalid_calling_error.h  cvedix_invalid_pipeline_error.h  cvedix_not_implemented_error.h
include/cvedix/nodes/ba/: cvedix_ba_crossline_node.h  cvedix_ba_jam_node.h  cvedix_ba_stop_node.h
include/cvedix/nodes/broker/: cvedix_ba_socket_broker_node.h  cvedix_console_broker_node.h  cvedix_embeddings_properties_socket_broker_node.h  cvedix_embeddings_socket_broker_node.h  cvedix_enhanced_console_broker_node.h  cvedix_expr_socket_broker_node.h  cvedix_kafka_broker_node.h  cvedix_mqtt_broker_node.h  cvedix_msg_broker_node.h  cvedix_plate_socket_broker_node.h  (+2 more)
include/cvedix/objects/: cvedix_control_meta.h  cvedix_frame_face_target.h  cvedix_frame_meta.h  cvedix_frame_pose_target.h  cvedix_frame_target.h  cvedix_frame_text_target.h  cvedix_image_record_control_meta.h  cvedix_meta.h  cvedix_sub_target.h  cvedix_video_record_control_meta.h
include/cvedix/utils/: cvedix_gate.h  cvedix_pipe_checker.h  cvedix_semaphore.h  cvedix_utils.h
mcp/: README.md  package-lock.json  package.json
mcp/src/: index.ts
mcp/src/resources/: node-catalog.ts  pipeline-patterns.ts
samples/: CMakeLists.txt
samples/01_basic_pipeline/: main.cpp
samples/02_face_detection_blur/: main.cpp
samples/03_multi_branch/: main.cpp
scripts/: package_sdk.sh
(+92 files in other folders)
